updated usage_guide and added python version

--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -1,9 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "MIT License\n",
     "\n",
     "Copyright (c) 2019 Edward D. Lee, Bryan C. Daniels\n",
@@ -24,7 +25,8 @@
     "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
     "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
     "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
-    "SOFTWARE."
+    "SOFTWARE.\n",
+    "```"
    ]
   },
   {
