--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -22,6 +22,12 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
+
+v2.4.0 (TB Released 2021/01)
+----------------------------------------------------
+- Update for Python 3.8.3 and Boost 1.74.0.
+- New SparseEnumerate class for handling sparsely constrained system.
+
 v2.3.1 (Released 2020/10)
 ----------------------------------------------------
 - Automated linking of Boost C++ module using conda-forge.
