--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,11 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v2.4.0 (TB Released 2021/01)
+v2.4.1 (Released 2021/01)
+----------------------------------------------------
+- Fixed new bugs in installation scripts.
+
+v2.4.0 (Released 2021/01)
 ----------------------------------------------------
 - Update for Python 3.8.3 and Boost 1.74.0.
 - New SparseEnumerate class for handling sparsely constrained system.
