misc fixes fixed bug in test_solvers.py with SparseEnumerate changed version no. updated release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
+v2.4.2 (To be released 2021/02)
+----------------------------------------------------
+
 v2.4.1 (Released 2021/01)
 ----------------------------------------------------
 - Fixed new bugs in installation scripts.
