--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,11 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
+v2.4.3 (To be released 2021/04)
+----------------------------------------------------
+- Maintenance release to quash multiple bugs including one introduced in last
+  release. 
+
 v2.4.2 (Released 2021/04)
 ----------------------------------------------------
 - Fixed instantiation bug in model.Ising (thanks to saynbabul for pointing this
