compiled for 2.4.3 release

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v2.4.3 (To be released 2021/04)
+v2.4.3 (Released 2021/05)
 ----------------------------------------------------
 - Maintenance release to quash multiple bugs including one introduced in last
   release. 
