--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,10 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
+v2.4.4 (Released 2021/10)
+----------------------------------------------------
+- Updated conditional Metropolis sampling.
+
 v2.4.3 (Released 2021/05)
 ----------------------------------------------------
 - Maintenance release to quash multiple bugs including one introduced in last
