--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,11 +23,12 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v3.0.0 (To be released 2022/05)
+v3.0.0 (To be released 2022/06)
 ----------------------------------------------------
 - Conditional (fixed spin) Metropolis sampling now in C++).
 - Standardized method names for generating samples and data member names for
   sample to "generate_sample" and the singular "sample".
+- Better handling of conda include paths and Python version in setup.
 
 v2.4.4 (Released 2021/10)
 ----------------------------------------------------
