--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,10 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
+v3.0.1 (2022/11)
+----------------------------------------------------
+- Bug fix in setup script.
+
 v3.0.0 (To be released 2022/06)
 ----------------------------------------------------
 - Conditional (fixed spin) Metropolis sampling now in C++).
