updated release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,7 +1,7 @@
 Log for major changes in releases
 
 
-v3.0.1 (To be released 2022/11)
+v3.0.1 (Released 2022/10)
 ----------------------------------------------------
 - Bug fix in setup script.
 
