fixed bug in solver.set_insertion_ix() when only one parameter to fix

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,10 @@
 Log for major changes in releases
 
 
+v3.0.2 (Not yet released)
+----------------------------------------------------
+- Improvements to setup script.
+
 v3.0.1 (Released 2022/10)
 ----------------------------------------------------
 - Bug fix in setup script.
