--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,7 +3,7 @@ Log for major changes in releases
 
 v3.0.2 (Not yet released)
 ----------------------------------------------------
-- Improvements to setup script.
+- Improvements to setup script and compatibility with Python 3.10.
 
 v3.0.1 (Released 2022/10)
 ----------------------------------------------------
